--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,12 @@
 asgiref==3.9.1
 cffi==1.17.1
+dj-database-url==3.0.1
 Django==5.2.4
 django-ratelimit==4.1.0
+gunicorn==23.0.0
 numpy==2.2.5
+packaging==25.0
 pillow==11.3.0
-psycopg2-binary==2.9.10
 pycparser==2.22
 python-decouple==3.8
 scipy==1.15.3
