--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ gunicorn==23.0.0
 numpy==2.2.5
 packaging==25.0
 pillow==11.3.0
+psycopg2-binary==2.9.10
 pycparser==2.22
 python-decouple==3.8
 scipy==1.15.3
